sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-ingressn-ingressn-9ecccaa8b3-8afcc04c6bf639fd.elb.us-east-1.amazonaws.com
    http:
      paths:
      - path: /sonarqube
        pathType: Prefix
        backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000   # Default SonarQube service port
